# gxde-movie-reborn

./: CMakeLists.txt  README.md  build-deb
debian/: changelog  control  gxde-movie.install  libgxmr-dev.install  libgxmr-qt6-dev.install  libgxmr-qt6.install  libgxmr.install  rules
src/: CMakeLists.txt  gxde-movie.desktop  main.cpp
src/backends/mpv/: mpv_glwidget.cpp  mpv_glwidget.h  mpv_proxy.cpp  mpv_proxy.h
src/common/: actions.cpp  actions.h  dbus_adpator.cpp  event_relayer.cpp  event_relayer.h  mainwindow.cpp  shortcut_manager.cpp  thumbnail_worker.cpp  thumbnail_worker.h  utility_x11.cpp
src/libdmr/: CMakeLists.txt  compositing_manager.cpp  playlist_model.cpp
src/libgxmr/: CMakeLists.txt  libgxmr.pc.in  player_engine.cpp  playlist_model.cpp
src/libgxmr-qt6/: CMakeLists.txt  compositing_manager.cpp  compositing_manager.h  libgxmr-qt6.pc.in  movie_configuration.cpp  online_sub.cpp  opengl_cb.h  player_engine.cpp  playlist_model.cpp  utils.cpp
src/test/: CMakeLists.txt  gxmr_test.cpp
src/translations/: gxde-movie.ts  gxde-movie_af.ts  gxde-movie_am_ET.ts  gxde-movie_ar.ts  gxde-movie_ast.ts  gxde-movie_az.ts  gxde-movie_bg.ts  gxde-movie_bn.ts  gxde-movie_ca.ts  gxde-movie_cs.ts  gxde-movie_da.ts  gxde-movie_de.ts  gxde-movie_el.ts  gxde-movie_en_AU.ts  gxde-movie_eo.ts  gxde-movie_es.ts  gxde-movie_es_419.ts  gxde-movie_fa.ts  gxde-movie_fi.ts  gxde-movie_fil.ts  gxde-movie_fr.ts  gxde-movie_gl_ES.ts  gxde-movie_he.ts  gxde-movie_hi_IN.ts  gxde-movie_hr.ts  gxde-movie_hu.ts  gxde-movie_hy.ts  gxde-movie_id.ts  gxde-movie_it.ts  gxde-movie_ja.ts  gxde-movie_ko.ts  gxde-movie_ku_IQ.ts  gxde-movie_lt.ts  gxde-movie_ml.ts  gxde-movie_mn.ts  gxde-movie_ms.ts  gxde-movie_nb.ts  gxde-movie_ne.ts  gxde-movie_nl.ts  gxde-movie_pam.ts  (+18 more)
src/translations/desktop/: desktop.ts  desktop_am_ET.ts  desktop_az.ts  desktop_el.ts  desktop_en_AU.ts  desktop_eo.ts  desktop_fil.ts  desktop_gl_ES.ts  desktop_he.ts  desktop_hi_IN.ts  desktop_hr.ts  desktop_hy.ts  desktop_ja.ts  desktop_ku_IQ.ts  desktop_mn.ts  desktop_nb.ts  desktop_ro.ts  desktop_sl.ts  desktop_sv.ts  desktop_ta.ts  desktop_vi.ts  desktop_zh_HK.ts  desktop_zh_TW.ts
src/widgets/: movie_progress_indicator.cpp  playlist_widget.cpp  slider.cpp  slider.h  tip.cpp  tip.h  toolbox_proxy.cpp  toolbutton.cpp  toolbutton.h
